fix bug with Save video

--- a/HromadskyiPatrul/en.lproj/Localizable.strings
+++ b/HromadskyiPatrul/en.lproj/Localizable.strings
@@ -54,6 +54,7 @@
 "Take a Photo"                                  =   "Take a Photo";
 "Take a Video"                                  =   "Take a Video";
 "Record a Video"                                =   "Record a Video";
+"Start a Video"                                 =   "Start a Video";
 "Preview a Video"                               =   "Preview a Video";
 "Merge & Save video"                            =   "Saving";
 "Launch text"                                   =   "Launch";
