--- a/HromadskyiPatrul/ru.lproj/Localizable.strings
+++ b/HromadskyiPatrul/ru.lproj/Localizable.strings
@@ -54,6 +54,7 @@
 "Take a Photo"                                  =   "Сделать фото";
 "Take a Video"                                  =   "Снять видео";
 "Record a Video"                                =   "Запись видео";
+"Start a Video"                                 =   "Старт видео";
 "Preview a Video"                               =   "Просмотр видео";
 "Merge & Save video"                            =   "Сохранение";
 "Launch text"                                   =   "Запуск";
