--- a/HromadskyiPatrul/uk.lproj/Localizable.strings
+++ b/HromadskyiPatrul/uk.lproj/Localizable.strings
@@ -54,6 +54,7 @@
 "Take a Photo"                                  =   "Зробити фото";
 "Take a Video"                                  =   "Зняти відео";
 "Record a Video"                                =   "Запис відео";
+"Start a Video"                                 =   "Старт відео";
 "Preview a Video"                               =   "Перегляд відео";
 "Merge & Save video"                            =   "Збереження";
 "Launch text"                                   =   "Запуск";
