fix Main scene with Status Bar

--- a/HromadskyiPatrul/en.lproj/Localizable.strings
+++ b/HromadskyiPatrul/en.lproj/Localizable.strings
@@ -58,6 +58,7 @@
 "Preview a Video"                               =   "Preview a Video";
 "Merge & Save video"                            =   "Saving";
 "Launch text"                                   =   "Launch";
+"Authorization"                                 =   "Authorization";
 
 "Start"                                         =   "START";
 "Violation"                                     =   "ATTENTION";
