--- a/HromadskyiPatrul/ru.lproj/Localizable.strings
+++ b/HromadskyiPatrul/ru.lproj/Localizable.strings
@@ -58,6 +58,7 @@
 "Preview a Video"                               =   "Просмотр видео";
 "Merge & Save video"                            =   "Сохранение";
 "Launch text"                                   =   "Запуск";
+"Authorization"                                 =   "Авторизация";
 
 "Start"                                         =   "СТАРТ";
 "Violation"                                     =   "НАРУШЕНИЕ";
