--- a/HromadskyiPatrul/uk.lproj/Localizable.strings
+++ b/HromadskyiPatrul/uk.lproj/Localizable.strings
@@ -58,6 +58,7 @@
 "Preview a Video"                               =   "Перегляд відео";
 "Merge & Save video"                            =   "Збереження";
 "Launch text"                                   =   "Запуск";
+"Authorization"                                 =   "Авторизація";
 
 "Start"                                         =   "СТАРТ";
 "Violation"                                     =   "ПОРУШЕННЯ";
