HRPLoginViewController: fix rotate

--- a/HromadskyiPatrul/uk.lproj/Localizable.strings
+++ b/HromadskyiPatrul/uk.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "COMMAND VIOLATION"                             =   "КОМАНДА: \"ПОРУШЕННЯ\"";
 "Public patrol"                                 =   "Громадський патруль";
 "About text 1"                                  =   "Бачиш порушника правил дорожнього руху -";
-"About text 2"                                  =   "сфотографуй та надішли нам.";
+"About text 2"                                  =   "зафіксуй та надішли нам.";
 "About text 3"                                  =   "Країна має знати своїх «героїв»!";
 "Alert error email title"                       =   "Помилка";
 "Alert info title"                              =   "Інфо";
