--- a/HromadskyiPatrul/ru.lproj/Localizable.strings
+++ b/HromadskyiPatrul/ru.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "COMMAND VIOLATION"                             =   "КОМАНДА: \"НАРУШЕНИЕ\"";
 "Public patrol"                                 =   "Общественный патруль";
 "About text 1"                                  =   "Видиш нарушителя правил дорожного движения -";
-"About text 2"                                  =   "сфотографируй и пришли нам.";
+"About text 2"                                  =   "зафиксируй и пришли нам.";
 "About text 3"                                  =   "Страна должна знать своих «героев»!";
 "Alert error email title"                       =   "Ошибка";
 "Alert info title"                              =   "Инфо";
