comment pagination & modify video text & remove loader from violation cell

--- a/HromadskyiPatrul/en.lproj/Localizable.strings
+++ b/HromadskyiPatrul/en.lproj/Localizable.strings
@@ -56,8 +56,8 @@
 "Preview a Photo"                               =   "Preview a Photo";
 "Upload a Photo"                                =   "Upload a Photo";
 "Upload a Video"                                =   "Upload a Video";
-"Upload Photos"                                 =   "Upload Photos";
-"Upload Videos"                                 =   "Upload Videos";
+"Upload Photos"                                 =   "Upload a Photo";
+"Upload Videos"                                 =   "Upload a Video";
 "Upload title"                                  =   "Uploading";
 "Take a Photo"                                  =   "Take a Photo";
 "Take a Video"                                  =   "Take a Video";
