--- a/HromadskyiPatrul/ru.lproj/Localizable.strings
+++ b/HromadskyiPatrul/ru.lproj/Localizable.strings
@@ -49,6 +49,7 @@
 "Alert add still image error message"           =   "Не удалось добавить скриншот к текущей сессии";
 "Alert API Upload error message"                =   "Не удалось отправить видео на сервер. Пожалуйста, попробуйте еще раз";
 "Alert Location error message"                  =   "Это нарушение не имеет координат.";
+"Alert GPS error message"                       =   "Чтобы воспользоваться функцией съемки видео, включите датчик GPS";
 
 "Open a Photo"                                  =   "Просмотреть фото";
 "Open a Video"                                  =   "Просмотреть видео";
