--- a/HromadskyiPatrul/uk.lproj/Localizable.strings
+++ b/HromadskyiPatrul/uk.lproj/Localizable.strings
@@ -49,6 +49,7 @@
 "Alert add still image error message"           =   "Не вдалося добавити зображення до поточної сесії";
 "Alert API Upload error message"                =   "Не вдалося відправити відео на сервер. Будь ласка, спробуйте ще раз";
 "Alert Location error message"                  =   "Це порушення не має координат.";
+"Alert GPS error message"                       =   "Please turn on GPS sensor to shoot video";
 
 "Open a Photo"                                  =   "Переглянути фото";
 "Open a Video"                                  =   "Переглянути відео";
