--- a/HromadskyiPatrul/ru.lproj/Localizable.strings
+++ b/HromadskyiPatrul/ru.lproj/Localizable.strings
@@ -72,3 +72,6 @@
 
 "Start"                                         =   "СТАРТ";
 "Violation"                                     =   "НАРУШЕНИЕ";
+
+"Alert error sleep message"                     =    "Запись видео была остановлена не корректно, файл утрачен...";
+"Start from Recorder"                           =    "Стартовать с регистратора";
