--- a/HromadskyiPatrul/uk.lproj/Localizable.strings
+++ b/HromadskyiPatrul/uk.lproj/Localizable.strings
@@ -72,3 +72,7 @@
 
 "Start"                                         =   "СТАРТ";
 "Violation"                                     =   "ПОРУШЕННЯ";
+
+"Alert error sleep message"                     =    "Запис відео був припинений не корректно, файл втрачено...";
+"Start from Recorder"                           =    "Стартувати з реєстратора";
+
