create new build 2.0.1 (7): fix bug in RecordVC

--- a/HromadskyiPatrul/en.lproj/Localizable.strings
+++ b/HromadskyiPatrul/en.lproj/Localizable.strings
@@ -76,3 +76,5 @@
 
 "Alert error sleep message"                     =    "Recording was stopped incorrectly, the file was lost…";
 "Start from Recorder"                           =    "Show dashcam screen on launch";
+"Close"                                         =    "Close";
+
