--- a/HromadskyiPatrul/ru.lproj/Localizable.strings
+++ b/HromadskyiPatrul/ru.lproj/Localizable.strings
@@ -76,3 +76,5 @@
 
 "Alert error sleep message"                     =    "Запись видео была остановлена не корректно, файл утрачен...";
 "Start from Recorder"                           =    "Стартовать с регистратора";
+"Close"                                         =    "Закрыть";
+
