--- a/HromadskyiPatrul/uk.lproj/Localizable.strings
+++ b/HromadskyiPatrul/uk.lproj/Localizable.strings
@@ -76,4 +76,6 @@
 
 "Alert error sleep message"                     =    "Запис відео був припинений не корректно, файл втрачено...";
 "Start from Recorder"                           =    "Стартувати з реєстратора";
+"Close"                                         =    "Закрити";
+
 
